--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -30,6 +30,7 @@
 /bundles/org.openhab.binding.anel/ @paphko
 /bundles/org.openhab.binding.anthem/ @mhilbush
 /bundles/org.openhab.binding.argoclima/ @mbronk
+/bundles/org.openhab.binding.aquatemp/ @rogrun
 /bundles/org.openhab.binding.asuswrt/ @wildcs
 /bundles/org.openhab.binding.astro/ @gerrieg
 /bundles/org.openhab.binding.atlona/ @mlobstein
