--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -384,6 +384,7 @@
 /bundles/org.openhab.binding.tasmotaplug/ @mlobstein
 /bundles/org.openhab.binding.telegram/ @ZzetT
 /bundles/org.openhab.binding.teleinfo/ @Nokyyz @olivierkeke
+/bundles/org.openhab.binding.telenot/ @rogrun
 /bundles/org.openhab.binding.tellstick/ @openhab/add-ons-maintainers
 /bundles/org.openhab.binding.tesla/ @kgoderis
 /bundles/org.openhab.binding.teslapowerwall/ @psmedley
