--- a/bom/openhab-addons/pom.xml
+++ b/bom/openhab-addons/pom.xml
@@ -146,6 +146,11 @@
       <artifactId>org.openhab.binding.anthem</artifactId>
       <version>${project.version}</version>
     </dependency>
+        <dependency>
+      <groupId>org.openhab.addons.bundles</groupId>
+      <artifactId>org.openhab.binding.aquatemp</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.openhab.addons.bundles</groupId>
       <artifactId>org.openhab.binding.argoclima</artifactId>
